--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <H1>My Name is Yossawat Srithad</H1>
     <h2>Fist Page From Github</h2>
-    <a href="https://hosting.udru.ac.th/it66040233146/">Website</a>
+    <a href="https://hosting.udru.ac.th/it66040233146/website/homepage.html">Website</a>
     //1
 
 </body>
