--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <body>
     <H1 class="animated-text">My Name is Yossawat Srithad</H1>
     <br>
-    <h2 class="animated-text">Fist Page From Github</h2><br>
+    <h2 class="animated-text">Fist Page From Github</h2>
+    <br>
     <a href="https://hosting.udru.ac.th/it66040233146/website/homepage.html">Website</a>
     <script>
         const textElement = document.getElementById("animated-text");
