--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <H1 class="animated-text">My Name is Yossawat Srithad</H1>
     <br>
-    <h2 class="animated-text">Fist Page From Github</h2>
+    <h2 id="animated-text">Fist Page From Github</h2>
     <br>
     <a href="https://hosting.udru.ac.th/it66040233146/website/homepage.html">Website</a>
     <script>
@@ -56,8 +56,7 @@
             span.textContent = char;
             span.className = "animated-char";
             textElement.appendChild(span);
-
-            // เพิ่มคลาส visible ทีละตัวด้วย delay
+        // เพิ่มคลาส visible ทีละตัวด้วย delay
             setTimeout(() => {
                 span.classList.add("visible");
             }, index * 100); // ปรับ delay ตามลำดับ
